<resources>
    <string name="app_name">TrainBot</string>
    <string name="generar">Generar Entrenamiento</string>
    <string name="crear">Crear Entrenamiento</string>
    <string name="desarrollador">Desarrollo</string>
    <string name="atras">Atrás</string>
    <string name="kcal">Ver Kcal al día</string>
    <string name="salir">Salir</string>
    <string name="calcular">Calcular</string>

    <string name="consulta">VER ENTRENAMIENTO</string>

    <string name="calentamiento">CALENTAMIENTO</string>
    <string name="partePrincipal">PARTE PRINCIPAL</string>
    <string name="estiramientos">ESTIRAMIENTOS</string>

    <string name="trainbotdescripcion">Aprieta el botón para ver la tabla de ejercicios que TrainBot ha generado para ti.</string>

    <string name="ejercicio1">Ejercicio 1:</string>
    <string name="ejercicio2">Ejercicio 2:</string>
    <string name="ejercicio3">Ejercicio 3:</string>
    <string name="ejercicio4">Ejercicio 4:</string>
    <string name="ejercicio5">Ejercicio 5:</string>
    <string name="ejercicio6">Ejercicio 6:</string>

    <string name="texto1">DESARROLLADOR DE TRAINBOT</string>
    <string name="texto2">ADRIÁN RAYA HERNÁNDEZ</string>
    <string name="texto3">Desarrollador de aplicaciones móviles y Titulado en Actividades Físicas</string>

    <string name="peso">Kg</string>
    <string name="altura">cm</string>
    <string name="edad">años</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="calculo1">Género</string>
    <string name="calculo2">¿Cuántos años tienes?</string>
    <string name="calculo3">¿Cuánto mides?</string>
    <string name="calculo4">¿Cuánto pesas?</string>

    <string name="ejercicio">Ejercicio por semana</string>
    <string name="Nada">Nada</string>
    <string name="dia1">1 Día</string>
    <string name="dia2">2 Días</string>
    <string name="dia4">4 Días</string>
    <string name="dia6">6 Días</string>
    <string name="Todos">Siempre</string>

    <string name="TipoEntrenamiento">Tipo de Entrenamiento</string>
    <string name="Cardio">Cardio</string>
    <string name="Mantenimiento">Mantenimiento</string>
    <string name="Definicion">Definición</string>
    <string name="Volumen">Volumen</string>
    <string name="LugarEntreno">¿Dónde vas a realizar el entrenamiento?</string>
    <string name="Gimnasio">Gimnasio</string>
    <string name="Exterior">Exterior</string>
    <string name="Materiales">¿Tienes materiales? (Mancuernas, Gomas...)</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Cuerpo">Parte del cuerpo que quieres entrenar (máximo 2)</string>
    <string name="Brazo">Biceps/Triceps</string>
    <string name="Pecho">Pecho</string>
    <string name="Espalda">Espalda</string>
    <string name="Piernas">Piernas</string>
    <string name="Gluteos">Gluteos</string>
    <string name="Abdomen">Abdomen</string>
    <string name="Todo">Todo</string>
    <string name="Intensidad">Intensidad del ejercicio</string>
    <string name="Alta">Alta</string>
    <string name="Media">Media</string>
    <string name="Baja">Baja</string>


</resources>