<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneradorTrainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TipoEntrenamiento"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:translationX="10dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:translationX="20dp">

                <RadioButton
                    android:id="@+id/rbCardio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cardio"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbMantenimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Mantenimiento"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbDefinicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Definicion"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbVolumen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Volumen"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView133"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LugarEntreno"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:translationX="10dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:translationX="20dp">

                <RadioButton
                    android:id="@+id/rbGimnasio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Gimnasio" />

                <RadioButton
                    android:id="@+id/rbExterior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Exterior" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView222"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cuerpo"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:translationX="10dp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/cbBrazo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Brazo" />

                    <CheckBox
                        android:id="@+id/cbPecho"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Pecho" />

                    <CheckBox
                        android:id="@+id/cbEspalda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Espalda" />

                    <CheckBox
                        android:id="@+id/cbPiernas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Piernas" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/cbGluteos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Gluteos" />

                    <CheckBox
                        android:id="@+id/cbAbdomen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Abdomen" />

                    <CheckBox
                        android:id="@+id/cbTodo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Todo" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView122"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Materiales"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:translationX="10dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:translationX="20dp">

                <RadioButton
                    android:id="@+id/rbMaterialSi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Si" />

                <RadioButton
                    android:id="@+id/rbMaterialNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/No" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear"
            android:translationX="120dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>