<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kcal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAtras3"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/atras"
            android:translationX="10dp"
            android:translationY="10dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:translationX="10dp"
            android:translationY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calculo1"
                    android:textColor="#00BCD4"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/rbtnMujer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mujer"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rbtnHombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hombre"
                        tools:ignore="TouchTargetSizeCheck" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calculo2"
                    android:textColor="#2196F3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEdad"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="@string/edad"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edad"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calculo3"
                    android:textColor="#2196F3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etAltura"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:ems="10"
                    android:hint="@string/altura"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/altura"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/calculo4"
                    android:textColor="#2196F3"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPeso"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="@string/peso"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="6"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/peso"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ejercicio"
            android:textColor="#009688"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="100dp"
                android:orientation="vertical"
                android:translationX="10dp">

                <RadioButton
                    android:id="@+id/rbNada"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Nada"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rb1dia"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dia1"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rb2dia"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dia2"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rb4dia"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dia4"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rb6dia"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dia6"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rbsiempre"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Todos"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="143dp"
                android:layout_height="87dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="60dp"
                android:text="@string/calcular"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="#000000" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>